# andokensaku

./: .gitignore  .vercelignore  README.md  app.config.ts  babel.config.js  eslint.config.js  jest.config.js  metro.config.js  package.json  tsconfig.json  vercel.json
.maestro/: compare-flow.yaml  settings-flow.yaml  smoke-home.yaml
__tests__/engines/: compare.test.ts  panel9.test.ts  speed.test.ts  stairs.test.ts
__tests__/features/versus/: store.test.ts
__tests__/unit/: formatNumber.test.ts  normalize.test.ts
app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx  profile.tsx  result.tsx  settings.tsx  tutorial.tsx
app/(modes)/: _layout.tsx  compare.tsx  panel9.tsx  speed.tsx  stairs.tsx
app/versus/: _layout.tsx  handoff.tsx  result.tsx
assets/data/packs/: compare_v1.json  packs_manifest.json  panel9_v1.json  speed_v1.json  stairs_v1.json
locales/: en.json  ja.json
public/: manifest.webmanifest  sw.js
src/core/analytics/: analytics.ts
src/core/audio/: audioService.ts  sfxLibrary.ts
src/core/haptic/: hapticService.ts
src/core/network/: packClient.ts
src/core/storage/: mmkv.ts  preferences.ts
src/core/utils/: formatNumber.ts  i18n.ts  shuffle.ts  startupTimer.ts
src/data/models/: compareQuestion.ts  index.ts  panel9Question.ts  questionBase.ts  (+2 more)
tools/mcp_search_server/: .env.example  .gitignore  README.md  pyproject.toml
tools/mcp_search_server/scripts/: smoke_cache.py  smoke_server.py
tools/mcp_search_server/src/mcp_search_server/: cache.py  config.py  cse_client.py  normalize.py  server.py
tools/validators/: validate_packs.py
(+38 files in other folders)
